add deploy command & change static file(some sentence)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "standup",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://skyloign.github.io/study.standup",
   "dependencies": {
+    "gh-pages": "^2.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
@@ -13,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   }
 }
